--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,14 @@
   <link rel="icon" type="image/x-icon" href="./assets/img/self/transparent_portfolio_picture.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <!-- AOS CSS -->
+  <link rel="stylesheet" href="/libs/aos/aos.css">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
+  <!-- AOS JS -->
+  <script src="/libs/aos/aos.js"></script>
 </body>
 </html>
