--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   
   <!-- AOS CSS -->
-  <link rel="stylesheet" href="assets/aos/dist/aos.css">
+  <link rel="stylesheet" href="/libs/aos/aos.css">
 
 </head>
 <body class="mat-typography">
   <app-root></app-root>
 
   <!-- AOS JS -->
-  <script src="assets/aos/dist/aos.js"></script>
+  <script src="/libs/aos/aos.js"></script>
 </body>
 </html>
